--- a/index.html
+++ b/index.html
@@ -30,6 +30,25 @@
     </script>
 </head>
 <body>
-    <span class="loading"></span>
+    
+    <div class="container">
+        <form>
+            <div class="row">
+                <div class="five columns">
+                    <label for="Username">Username</label>
+                    <input class="u-full-width" type="text" placeholder="Username" id="Username">
+                </div>
+                <div class="five columns">
+                    <label for="Username">Password</label>
+                    <input class="u-full-width" type="password" placeholder="Password" id="Password">
+                </div>
+                <div class="two columns">
+                    <label for="exampleEmailInput">&nbsp;</label>
+                    <input class="button-primary" type="submit" value="Login">
+                </div>
+            </div>
+        </form>
+    </div>
+    
 </body>
 </html>
