--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="two columns">
                     <label for="exampleEmailInput">&nbsp;</label>
-                    <input class="button-primary" type="submit" value="Login">
+                    <input align= "center" class="button-primary" type="submit" value="Login">
                 </div>
             </div>
         </form>
